@@ -1,66 +1,62 @@
 package com.pszymczyk.step5;
 
 import org.apache.kafka.clients.consumer.ConsumerRecord;
-import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
+import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.errors.WakeupException;
 import org.apache.kafka.common.serialization.StringDeserializer;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Properties;
-import java.util.UUID;
+import java.util.*;
 
-import static org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_OFFSET_RESET_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG;
+import static org.apache.kafka.clients.consumer.ConsumerConfig.*;
 
-public class FirstLevelCacheBackedByKafka implements Runnable {
+@SuppressWarnings("Duplicates")
+public class FirstLevelCacheBackedByKafka {
+
+    private static final Logger logger = LoggerFactory.getLogger(FirstLevelCacheBackedByKafka.class);
+    private static final Map<String, String> cache = new HashMap<>();
 
     private final KafkaConsumer<String, String> consumer;
     private final String topic;
 
-    private final Map<String, String> cache = new HashMap<>();
-
     public FirstLevelCacheBackedByKafka(String topic) {
         this.topic = topic;
-        Properties props = new Properties();
+        var props = new Properties();
         props.put(BOOTSTRAP_SERVERS_CONFIG, "localhost:9092");
-        props.put(GROUP_ID_CONFIG, "step5_"+ UUID.randomUUID().toString().substring(0, 7));
+        props.put(GROUP_ID_CONFIG, "step5_" + Optional.ofNullable(System.getProperty("INSTANCE_ID")).orElse("0"));
         props.put(KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
         props.put(VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
-        props.put(AUTO_OFFSET_RESET_CONFIG, "earliest");
         this.consumer = new KafkaConsumer<>(props);
     }
 
-    @Override
-    public void run() {
-        try {
-            consumer.subscribe(Arrays.asList(topic));
+    public void start() {
+        consumer.assign(List.of(new TopicPartition(topic, 0)));
+        consumer.seekToBeginning(consumer.assignment());
 
+        try {
             while (true) {
-                ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(Long.MAX_VALUE));
+                var records = consumer.poll(Duration.ofMillis(Long.MAX_VALUE));
                 for (ConsumerRecord<String, String> record : records) {
                     cache.put(record.key(), record.value());
                 }
             }
-        } catch (WakeupException e) {
-            // ignore for shutdown
+        } catch (WakeupException wakeupException) {
+            logger.info("Handling WakeupException.");
         } finally {
+            logger.info("Closing Kafka consumer...");
             consumer.close();
+            logger.info("Kafka consumer closed.");
         }
     }
 
-
-    public void shutdown() {
-        consumer.wakeup();
+    public static Map<String, String> getCachedItems() {
+        return Map.copyOf(cache);
     }
 
-    public Map<String, String> getCachedItems() {
-        return cache;
+    public void wakeup() {
+        consumer.wakeup();
     }
 }
